# tracekata

./: .gitignore  README.md  index.html  package-lock.json  package.json  产品定位报告.md
media/design/: prototype.html
src/: AnchorView.tsx  App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: anchor_field.rs  claude.rs  lib.rs  main.rs
src/lib/: anchor-layout.ts  line-diff.ts
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/scripts/: smoke-test.mjs
vscode-extension/src/: extension.ts
