[package]
name = "tracekata-desktop"
version = "0.1.0"
description = "TraceKata desktop practice helper"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tracekata_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util"] }
uuid = { version = "1", features = ["v4"] }
# 锚点域：DashScope 兼容 API（提取/嵌入/簇命名），显式 no_proxy 直连
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
